--- a/Catalyst/Redistributables/SpeedTest/speedtest.5
+++ b/Catalyst/Redistributables/SpeedTest/speedtest.5
@@ -1,194 +1,212 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "SPEEDTEST" "" "November 2021" "" ""
+.TH "SPEEDTEST" "5" "July 2022" "Ookla" " Speedtest 1.2.0.84"
 .
-.SH "Name"
+.SH "NAME"
 \fBspeedtest\fR \- Speedtest CLI by Ookla is the official command line client for testing the speed and performance of your internet connection\.
 .
-.SH "Version"
-1\.1\.1
+.SH "SYNOPSIS"
+\fBspeedtest\fR [\fBhelp\fR] [\fB\-aAbBfhiIpPsv\fR] [\fB\-\-ca\-certificate=path\fR] [\fB\-\-format=\fR\fIformat\-type\fR] [\fB\-\-interface=interface\fR] [\fB\-\-ip=ip_address\fR] [\fB\-\-output\-header\fR] [\fB\-\-precision\fR=\fInum_decimal_places\fR] [\fB\-\-progress\fR=\fIyes|no\fR] [\fB\-\-selection\-details\fR] [\fB\-\-server\-id\fR=\fIid\fR] [\fB\-\-servers\fR] [\fB\-\-unit\fR=\fIunit\-of\-measure\fR] [\fB\-\-version\fR]
 .
-.SH "Synopsis"
-.
-.nf
-
-    speedtest [\-aAbBfhiIpPsv] [\-\-ca\-certificate=path] [\-\-format=[=format\-type]] [\-\-help] [\-\-interface=interface]
-    [\-\-ip=ip_address] [\-\-output\-header] [\-\-precision=num_decimal_places] [\-\-progress=yes|no]
-    [\-\-selection\-details] [\-\-server\-id=id] [\-\-servers] [\-\-unit=[=unit\-of\-measure]] [\-\-version]
-.
-.fi
-.
-.SH "Description"
+.SH "DESCRIPTION"
 \fBspeedtest\fR is an application that measures the latency, jitter, packet loss, download bandwidth, and upload bandwidth of the network connection between the client and a nearby Speedtest Server\.
 .
-.SH "Options"
+.SH "OPTIONS"
 .
-.IP "\(bu" 4
+.TP
 \fB\-h, \-\-help\fR
-.
-.br
 Print usage information
 .
-.IP "\(bu" 4
-\fB\-v\fR Logging verbosity, specify multiple times for higher verbosity (e\.g\. \fB\-vvv\fR)
+.TP
+\fB\-v\fR
+Logging verbosity, specify multiple times for higher verbosity (e\.g\. \fB\-vvv\fR)
 .
-.IP "\(bu" 4
-\fB\-V, \-\-version\fR Print version number
+.TP
+\fB\-V, \-\-version\fR
+Print version number
 .
-.IP "\(bu" 4
-\fB\-L, \-\-servers\fR List nearest servers
+.TP
+\fB\-L, \-\-servers\fR
+List nearest servers
 .
-.IP "\(bu" 4
-\fB\-\-selection\-details\fR Show server selection details
+.TP
+\fB\-\-selection\-details\fR
+Show server selection details
 .
-.IP "\(bu" 4
+.TP
 \fB\-s\fR \fIid\fR, \fB\-\-server\-id\fR=\fIid\fR
-.
-.br
 Specify a server from the server list using its id
 .
-.IP "\(bu" 4
+.TP
 \fB\-o\fR \fIhostname\fR, \fB\-\-host\fR=\fIhostname\fR
-.
-.br
 Specify a server from the server list using its hostname
 .
-.IP "\(bu" 4
-\fB\-f\fR \fIformat_type\fR \fB\-\-format\fR=\fIformat_type\fR
+.TP
+\fB\-f\fR \fIformat_type\fR, \fB\-\-format\fR=\fIformat_type\fR
+Output format (default is \fIhuman\-readable\fR)\. See \fIOUTPUT FORMATS\fR below for details\.
 .
-.br
-Output format (default = human\-readable) Note: Machine readable formats (csv, tsv, json, jsonl, json\-pretty) use bytes as the unit of measure with max precision\.
+.TP
+\fB\-\-progress\-update\-interval\fR=\fIinterval\fR
+Progress update interval (100\-1000 milliseconds)
 .
-.IP
-\fIformat_type\fR values are as follows:
+.TP
+\fB\-\-output\-header\fR
+Show output header for CSV and TSV formats
 .
-.IP "\(bu" 4
-\fBhuman\-readable\fR human readable output
+.TP
+\fB\-u\fR \fIunit_of_measure\fR, \fB\-\-unit\fR=\fIunit_of_measure\fR
+Output unit for displaying speeds when using the \fIhuman\-readable\fR output format\. The default unit is Mbps\. See \fIUNITS OF MEASURE\fR for more details\.
 .
-.IP "\(bu" 4
-\fBcsv\fR comma separated values
-.
-.IP "\(bu" 4
-\fBtsv\fR tab separated values
-.
-.IP "\(bu" 4
-\fBjson\fR javascript object notation (compact)
-.
-.IP "\(bu" 4
-\fBjsonl\fR javascript object notation (lines)
-.
-.IP "\(bu" 4
-\fBjson\-pretty\fR javascript object notation (pretty)
-.
-.IP "" 0
-
-.
-.IP "\(bu" 4
-\fB\-\-progress\-update\-interval\fR=\fIinterval\fR Progress update interval (100\-1000 milliseconds)
-.
-.IP "\(bu" 4
-\fB\-\-output\-header\fR Show output header for CSV and TSV formats
-.
-.IP "\(bu" 4
-\fB\-u\fR\fIunit_of_measure\fR\fB,\~\-\-unit\fR\fIunit_of_measure\fR Output unit for displaying speeds (Note: this is only applicable for ‘human\-readable’ output format and the default unit is Mbps)
-.
-.IP "\(bu" 4
-\fBbps\fR bits per second (decimal prefix)
-.
-.IP "\(bu" 4
-\fBkbps\fR kilobits per second (decimal prefix)
-.
-.IP "\(bu" 4
-\fBMbps\fR megabits per second (decimal prefix)
-.
-.IP "\(bu" 4
-\fBGbps\fR gigabits per second (decimal prefix)
-.
-.IP "\(bu" 4
-\fBkibps\fR kilobits per second (binary prefix)
-.
-.IP "\(bu" 4
-\fBMibps\fR megabits per second (binary prefix)
-.
-.IP "\(bu" 4
-\fBGibps\fR gigabits per second (binary prefix)
-.
-.IP "\(bu" 4
-\fBB/s\fR bytes per second
-.
-.IP "\(bu" 4
-\fBkB/s\fR kilobytes per second
-.
-.IP "\(bu" 4
-\fBMB/s\fR megabytes per second
-.
-.IP "\(bu" 4
-\fBGiB/s\fR gigabytes per second
-.
-.IP "\(bu" 4
-\fBauto\-binary\-bytes\fR automatic in binary bytes
-.
-.IP "\(bu" 4
-\fBauto\-decimal\-bytes\fR automatic in decimal bytes
-.
-.IP "\(bu" 4
-\fBauto\-binary\-bytes\fR automatic in binary bits
-.
-.IP "\(bu" 4
-\fBauto\-binary\-bytes\fR automatic in decimal bits
-.
-.IP "" 0
-
-.
-.IP "\(bu" 4
+.TP
 \fB\-a\fR
+Shortcut for [\fB\-u\fR \fIauto\-decimal\-bits\fR]
 .
-.br
-Shortcut for [\fB\-u auto\-decimal\-bits\fR]
-.
-.IP "\(bu" 4
+.TP
 \fB\-A\fR
+Shortcut for [\fB\-u\fR \fIauto\-decimal\-bytes\fR]
 .
-.br
-Shortcut for [\fB\-u auto\-decimal\-bytes\fR]
-.
-.IP "\(bu" 4
+.TP
 \fB\-b\fR
+Shortcut for [\fB\-u\fR \fIauto\-binary\-bits\fR]
 .
-.br
-Shortcut for [\fB\-u auto\-binary\-bits\fR]
-.
-.IP "\(bu" 4
+.TP
 \fB\-B\fR
+Shortcut for [\fB\-u\fR \fIauto\-binary\-bytes\fR]
 .
-.br
-Shortcut for [\fB\-u auto\-binary\-bytes\fR]
+.TP
+\fB\-P\fR \fIdecimal_places\fR, \fB\-\-precision\fR=\fIdecimal_places\fR
+Number of decimal places to use (default = 2, valid = 0\-8)\. Only applicable to the \fIhuman\-readable\fR output format\.
 .
-.IP "\(bu" 4
-\fB\-P\fR \fIdecimal_places\fR \fB\-\-precision\fR=\fIdecimal_places\fR
+.TP
+\fB\-p\fR \fIyes\fR|\fIno\fR, \fB\-\-progress\fR=\fIyes\fR|\fIno\fR
+Enable or disable progress bar (default is \fIyes\fR when interactive)
 .
-.br
-Number of decimal_places to use (default = 2, valid = 0\-8)
+.TP
+\fB\-I\fR \fIinterface\fR, \fB\-\-interface\fR=\fIinterface\fR
+Attempt to bind to the specified interface when connecting to servers
 .
-.IP "\(bu" 4
-\fB\-p\fR \fIyes\fR|\fIno\fR \fB\-\-progress\fR=\fIyes\fR|\fIno\fR
+.TP
+\fB\-i\fR \fIip_address\fR, \fB\-\-ip\fR=\fIip_address\fR
+Attempt to bind to the specified IP address when connecting to servers
 .
-.br
-Enable or disable progress bar (default = yes when interactive)
+.TP
+\fB\-\-ca\-certificate\fR=\fIpath\fR
+Path to CA Certificate bundle, see \fISSL CERTIFICATE LOCATIONS\fR below\.
 .
-.IP "\(bu" 4
-\fB\-I\fR \fIinterface\fR \fB\-\-interface\fR=\fIinterface\fR Attempt to bind to the specified interface when connecting to servers
+.SH "OUTPUT FORMATS"
+These are the available output formats for Speedtest CLI specified with the \fB\-f\fR or \fB\-\-format\fR flags\. All machine readable formats (csv, tsv, json, jsonl, json\-pretty) use bytes for data sizes, bytes per seconds for speeds and milliseconds for durations\. They also always use maximum precision output\.
 .
-.IP "\(bu" 4
-\fB\-i\fR \fIip_address\fR \fB\-\-ip\fR=\fIip_address\fR Attempt to bind to the specified IP address when connecting to servers
+.TP
+\fBhuman\-readable\fR
+human readable output
 .
-.IP "\(bu" 4
-\fB\-\-ca\-certificate\fR=\fIpath\fR Path to CA Certificate bundle, see note below\.
+.TP
+\fBcsv\fR
+comma separated values
 .
-.IP "" 0
+.TP
+\fBtsv\fR
+tab separated values
 .
-.SH "Terms of Use and Privacy Policy Notices"
+.TP
+\fBjson\fR
+javascript object notation (compact)
+.
+.TP
+\fBjsonl\fR
+javascript object notation (lines)
+.
+.TP
+\fBjson\-pretty\fR
+javascript object notation (pretty)
+.
+.SH "UNITS OF MEASURE"
+For the human\-readable output format, you can specify the unit of measure to use\. The default unit is \fIMbps\fR\. The supported units are listed below\.
+.
+.P
+These units do not apply to machine readable output formats (json, jsonl, csv and tsv)\.
+.
+.SS "Decimal options (multipliers of 1000)"
+.
+.TP
+\fBbps\fR
+bits per second
+.
+.TP
+\fBkbps\fR
+kilobits per second
+.
+.TP
+\fBMbps\fR
+megabits per second
+.
+.TP
+\fBGbps\fR
+gigabits per second
+.
+.TP
+\fBB/s\fR
+bytes per second
+.
+.TP
+\fBkB/s\fR
+kilobytes per second
+.
+.TP
+\fBMB/s\fR
+megabytes per second
+.
+.TP
+\fBGB/s\fR
+gigabytes per second
+.
+.SS "Binary options (multipliers of 1024)"
+.
+.TP
+\fBkibps\fR
+kibibits per second
+.
+.TP
+\fBMibps\fR
+mebibits per second
+.
+.TP
+\fBGibps\fR
+gibibits per second
+.
+.TP
+\fBkiB/s\fR
+kibibytes per second
+.
+.TP
+\fBMiB/s\fR
+mebibytes per second
+.
+.TP
+\fBGiB/s\fR
+gibibytes per second
+.
+.SS "Auto\-scaling options"
+Automatic units will scale the prefix depending on the measured speed\.
+.
+.TP
+\fBauto\-decimal\-bits\fR
+automatic in decimal bits
+.
+.TP
+\fBauto\-decimal\-bytes\fR
+automatic in decimal bytes
+.
+.TP
+\fBauto\-binary\-bits\fR
+automatic in binary bits
+.
+.TP
+\fBauto\-binary\-bytes\fR
+automatic in binary bytes
+.
+.SH "TERMS OF USE AND PRIVACY POLICY NOTICES"
 You may only use this Speedtest software and information generated from it for personal, non\-commercial use, through a command line interface on a personal computer\. Your use of this software is subject to the End User License Agreement, Terms of Use and Privacy Policy at these URLs:
 .
 .IP "\(bu" 4
@@ -202,7 +220,7 @@ You may only use this Speedtest software and information generated from it for p
 .
 .IP "" 0
 .
-.SH "Output"
+.SH "OUTPUT"
 Upon successful execution, the application will exit with an exit code of 0\. The result will include latency, jitter, download, upload, packet loss (where available), and a result URL\.
 .
 .P
@@ -234,24 +252,26 @@ The Result URL is available to share your result, appending \fB\.png\fR to the R
 .nf
 
 $ speedtest
-    Speedtest by Ookla
+   Speedtest by Ookla
 
-     Server: Speedtest\.net \- New York, NY (id = 10390)
-        ISP: Comcast Cable
-    Latency:    57\.81 ms   (3\.65 ms jitter)
-   Download:    76\.82 Mbps (data used: 80\.9 MB)
-     Upload:    37\.58 Mbps (data used: 65\.3 MB)
-Packet Loss:     0\.0%
- Result URL: https://www\.speedtest\.net/result/c/8ae1200c\-e639\-45e5\-8b55\-41421a079250
+      Server: SUNET \- Stockholm (id: 26852)
+         ISP: Bahnhof AB
+Idle Latency:     5\.04 ms   (jitter: 0\.04ms, low: 5\.01ms, high: 5\.07ms)
+    Download:   968\.73 Mbps (data used: 117\.5 MB)
+                 12\.10 ms   (jitter: 1\.71ms, low: 6\.71ms, high: 18\.82ms)
+      Upload:   942\.13 Mbps (data used: 114\.8 MB)
+                  9\.94 ms   (jitter: 1\.10ms, low: 5\.30ms, high: 12\.72ms)
+ Packet Loss:     0\.0%
+  Result URL: https://www\.speedtest\.net/result/c/d1c46724\-50a3\-4a59\-87ca\-ffc09ea014b2
 .
 .fi
 .
 .IP "" 0
 .
-.SH "Network Timeout Values"
+.SH "NETWORK TIMEOUT VALUES"
 By default, network requests set a timeout of \fB10\fR seconds\. The only exception to this is latency testing, which sets a timeout of \fB15\fR seconds\.
 .
-.SH "Fatal Errors"
+.SH "FATAL ERRORS"
 Upon fatal errors, the application will exit with a non\-zero exit code\.
 .
 .P
@@ -284,7 +304,7 @@ Upon fatal errors, the application will exit with a non\-zero exit code\.
 .P
 \fI[error] Server Selection \- Failed to find a working test server\. (NoServers)\fR
 .
-.SH "SSL Certificate Locations"
+.SH "SSL CERTIFICATE LOCATIONS"
 By default the following paths are checked for CA certificate bundles on linux machines:
 .
 .IP "" 4
@@ -308,23 +328,45 @@ If the device under test does \fInot\fR have one of the above mentioned files, t
 .
 .nf
 
-wget https://curl\.haxx\.se/ca/cacert\.pem
+wget https://curl\.se/ca/cacert\.pem
 \./ookla \-\-ca\-certificate=\./cacert\.pem
 .
 .fi
 .
 .IP "" 0
 .
-.SH "Release Notes"
+.SH "RELEASE NOTES"
 .
-.SS "1\.1\.1 \- 11/15/2021"
+.SS "1\.2\.0 (2022\-07\-27)"
+.
+.IP "\(bu" 4
+Cleaned up formatting in human\-readable output for additional data within parenthesis (now using \fBlabel: value\fR consistently)
+.
+.IP "\(bu" 4
+Compressed result upload data to reduce data usage
+.
+.IP "\(bu" 4
+Added support for measuring responsiveness (latency during load)
+.
+.IP "\(bu" 4
+Added experimental support for multi\-server testing
+.
+.IP "\(bu" 4
+Updated third\-party dependencies: cURL 7\.83\.1, mbed TLS 3\.1\.0, Boost 1\.79\.0
+.
+.IP "\(bu" 4
+Added stability improvements
+.
+.IP "" 0
+.
+.SS "1\.1\.1 (2021\-11\-15)"
 .
 .IP "\(bu" 4
 Fixed issue with reported client version in uploaded results
 .
 .IP "" 0
 .
-.SS "1\.1\.0 \- 10/27/2021"
+.SS "1\.1\.0 (2021\-10\-27)"
 .
 .IP "\(bu" 4
 Use server\-side upload measurements
@@ -351,21 +393,21 @@ Fix potential buffer overflow
 Update Boost to 1\.77\.0
 .
 .IP "\(bu" 4
-Update mbedTLS to 2\.27\.0
+Update mbed TLS to 2\.27\.0
 .
 .IP "\(bu" 4
 Update cURL to 7\.78\.0
 .
 .IP "" 0
 .
-.SS "1\.0\.0 \- 10/29/2019"
+.SS "1\.0\.0 (2019\-10\-29)"
 .
 .IP "\(bu" 4
 Initial release
 .
 .IP "" 0
 .
-.SH "Copyright Notices for Third\-Party Products/Libraries"
+.SH "COPYRIGHT NOTICES FOR THIRD\-PARTY PRODUCTS/LIBRARIES"
 This software incorporates free and open source third\-party libraries, including:
 .
 .IP "\(bu" 4
